# site-file-grabber

./: Makefile  README.md  pyproject.toml
src/site_file_grabber/: __init__.py  cli.py
tests/: test_cli.py
